--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -32,6 +32,10 @@ body {
   letter-spacing: 2px;
   color: $color-dark-gray-3;
   margin-bottom: 3rem;
+
+  @include respond(full-hd) {
+    letter-spacing: 1px;
+  }
 }
 
 .header-tertiary {
